# ai-native-luanti

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
doc/: lua_api.md
openrealm_advantage_kit/: README.md  README_FIRST.md  VALIDATION_REPORT.md  openrealm_advantage_manifest.json  pyproject.toml
openrealm_advantage_kit/docs/: 06_github_issue_backlog.md  ARCHITECTURE.md  LOCAL_HTTP_API.md  LUANTI_INTEGRATION.md  NEXT_ISSUES.md  PRODUCT_ADVANTAGE.md
openrealm_advantage_kit/examples/prompts/: cozy_lakeside_village.txt  glacier_biome.txt  moonstone_ore.txt
openrealm_advantage_kit/lua_runtime/openrealm_runtime/: init.lua  mod.conf
openrealm_advantage_kit/luanti_mod/openrealm_creator/: README.md  init.lua  mod.conf
openrealm_advantage_kit/openrealm_creator_kernel/: __init__.py  cli.py  identifiers.py  luanti_generator.py  models.py  packager.py  parser.py  planner.py  png_tools.py  preview.py  safety.py  server.py
openrealm_advantage_kit/schemas/: openrealm_plan.schema.json
openrealm_advantage_kit/scripts/: run_tests.sh
openrealm_advantage_kit/studio/: README.md  app.js  index.html  server.py  styles.css
openrealm_advantage_kit/tests/: test_kernel.py
openrealm_advantage_kit/web_demo/: app.js  index.html  style.css
po/az/: luanti.po
src/: defaultsettings.cpp
tools/agents_sdk_model_adapter/: README.md  agent.py  main.py  pyproject.toml
util/: ai_native_agent_adapter_contract_eval.py  ai_native_agent_eval_promote.py  ai_native_agent_eval_queue.py  ai_native_agent_feedback_packet.py  ai_native_agent_improvement_loop_verify.py  (+42 more)
(+191 files in other folders)
