[project]
name = "ai-native-luanti-agents-sdk-model-adapter"
version = "0.1.0"
description = "OpenAI Agents SDK sidecar for the AI-native Luanti model adapter contract."
requires-python = ">=3.10"
dependencies = [
  "openai-agents>=0.2.0",
]

[project.scripts]
ai-native-luanti-agents-sdk-model-adapter = "main:main"
